[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache"
]
line-length = 100
extend-select = ["I"]
fixable = ["I001", "F401"]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]


