[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.7",
    "uvicorn>=0.34.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache"
]
line-length = 100
extend-select = ["I"]
fixable = ["I001", "F401"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]


